--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build:vercel",
-  "outputDirectory": "dist/bez-group-platform",
-  "framework": "angular",
-  "installCommand": "npm ci",
+  "public": true,
   "rewrites": [
     {
       "source": "/(.*)",
